--- a/src/components/CropCorousel.css
+++ b/src/components/CropCorousel.css
@@ -1,5 +1,5 @@
 .container1 {
-    width: 80%; /* Adjust based on preference */
+    width: 80%; 
     margin: auto;
     padding: 10px;
     text-align: center;
@@ -48,21 +48,21 @@
     font-size: 20px;
     font-weight: bold;
   }
-  /* Container Styling */
+ 
 .container2 {
     max-width: 90%;
     margin: auto;
     padding: 20px;
 }
 
-/* Heading Style */
+
 .text-primary {
     color: #007bff;
     font-size: 28px;
     font-weight: bold;
 }
 
-/* List Styling */
+
 ul {
     padding-left: 0;
     list-style-type: none;
@@ -77,21 +77,21 @@ li strong {
     color: #333;
 }
 
-/* Paragraph Styling */
+
 p {
     font-size: 16px;
     color: #555;
     line-height: 1.6;
 }
 
-/* Image Styling */
+
 .img-fluid {
     width: 100%;
     height: auto;
     border-radius: 5px;
 }
 
-/* Responsive Design */
+
 @media (max-width: 768px) {
     .container {
         text-align: center;
